# Grounding_LLM_in_DSGE_Simulators_for_Policy_Generation_and_Forecasting

./: .gitignore  Copy of Snowdrop_(2).ipynb  README.md  SEMANTIC_MODEL.md  SFR_PPO.md  pyproject.toml
The Global Economic Impacts of the COVID-19 Pandemic/: McKibbin & Fernando_2023_Data for Tables Figures and Annexures.xlsx  McKibbin & Fernando_2023_Epidemiological Assumptions.xlsx  McKibbin & Fernando_2023_Script to Produce Graphs.R  McKibbin & Fernando_2023_Shocks.xlsx  McKibbin & Fernando_2023_Simulation Results.xlsx
configs/: qpm_grpo.yaml  qpm_ppo.yaml  semantic_bert.yaml
data/: economic_discourse.example.jsonl
dsge_rl/: __init__.py  config.py  environment.py  modeling.py  pandemic_validation.py  rollout.py  semantics.py  sfr_conditioning.py  simulator_registry.py  snowdrop.py
dsge_rl/cli/: cross_test.py  evaluate.py  grpo.py  pandemic_validate.py  ppo.py  ppo_sfr.py
dsge_rl/trainers/: __init__.py  common.py  grpo.py  ppo.py  sfr_ppo.py
semantic_shift/: __init__.py  config.py  data.py  model.py  trainer.py
semantic_shift/cli/: encode.py  train.py
tests/: test_environment.py  test_gae.py  test_grpo.py  test_pandemic_validation.py  test_semantic_data.py  test_semantics.py  test_simulator_registry.py
